# neat

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  ga_lib.cpp
docs/: README.md  plan.md  resources.md
examples/: main.cpp
include/ne_lib/: ga.hpp  ne.hpp  nn.hpp
include/neuroevolution/: ne_lib.cpp
lib/: README.md  ne_lib.cpp  nn_lib.cpp
src/: ga.cpp  main.cpp  main.rs  ne.cpp  nn.cpp
src/neuroevolution/: evolutionary.rs  mod.rs  neural_network.rs
src/windows/: network_visualizer.rs  parameter_adjuster.rs
